@@ -43,9 +43,15 @@ Version CVS HEAD (?)
       v3 dimension limits were not correctly initialized and saved
       when dimensions were added or deleted, v3 wave pool offsets were
       not saved correctly
+    - write support: 24 bit samples can now be written
+    - write support: version 3 is now the default for new files
+    - more write support fixes: the 3ewg chunk is now bigger for v3
 
   * src/RIFF.cpp, src/RIFF.h:
     - added File::SetByteOrder method
+
+  * src/gigdump.cpp:
+    - added some missing dimension strings
 
 Version 3.1.1 (24 Mar 2007)
 
